--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,31 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Gochi+Hand&family=Kanit:wght@500&family=Permanent+Marker&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Kanit', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.topHeader {
+  text-decoration: underline;
+  font-size: 150%;
+  margin:10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+.topHeader:hover {
+  font-size: 200%;
+  color: rgb(73, 79, 82);
+  margin-top: 0;
 }
 
 @keyframes App-logo-spin {
