--- a/client/src/components/playlists/Playlists.css
+++ b/client/src/components/playlists/Playlists.css
@@ -5,10 +5,27 @@
     margin: 10px;
     padding: 10px;
     min-width: 200px;
+    background-color: rgb(10, 10, 10);
+    color: rgb(73, 79, 82);
 }
 
+.playlistName {
+    color: grey;
+    text-decoration: underline;
+}
 .playlist:hover {
     font-size: 110%;
     color: rgb(73, 79, 82);
     font-weight: 600;
+}
+.playlistImg img {
+    margin: 10px;
+    height: 100px;
+    width: 100px;
+    background-color: aliceblue;
+    border: 1px solid aliceblue;
+}
+.playlistImg img:hover {
+    height: 120px;
+    width: 120px;
 }
