--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,7 @@
 .App {
   text-align: center;
   font-family: 'Kanit', sans-serif;
+  background-color: black;
 }
 .topHeader {
   text-decoration: underline;
