--- a/client/src/components/artists/Artists.css
+++ b/client/src/components/artists/Artists.css
@@ -5,6 +5,8 @@
     margin: 10px;
     padding: 10px;
     min-width: 200px;
+    background-color: rgb(10, 10, 10);
+    color: rgb(73, 79, 82);
 }
 
 .artist:hover {
@@ -12,10 +14,16 @@
     color: rgb(73, 79, 82);
     font-weight: 600;
 }
+.artistName {
+    color: grey;
+    text-decoration: underline;
+}
 .artistImg img {
     margin: 10px;
     height: 100px;
     width: 100px;
+    background-color: aliceblue;
+    border: 1px solid aliceblue;
 }
 .artistImg img:hover {
     height: 120px;
