--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -2,6 +2,7 @@
     font-size: 200%;
     display: block;
     text-align: center;
+    color: aliceblue;
 }
 .header:hover {
     color: rgb(73, 79, 82);
