--- a/client/src/components/songs/Songs.css
+++ b/client/src/components/songs/Songs.css
@@ -5,9 +5,14 @@
     margin: 10px;
     padding: 10px;
     min-width: 200px;
+    background-color: rgb(10, 10, 10);
+    color: rgb(73, 79, 82);
 }
+
 .song span {
     margin: 10px;
+    color: grey;
+    text-decoration: underline;
 }
 .songTitle {
     right: 0;
