--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,19 @@
   color: rgb(73, 79, 82);
   margin-top: 0;
 }
+.info {
+  text-align: center;
+  margin: 0 auto;
+  color: aliceblue;
+}
+.info img {
+  max-height: 200px;
+  border: 1px solid aliceblue;
+}
+.info div {
+  margin:10px;
+  padding: 10px;
+}
 
 @keyframes App-logo-spin {
   from {
