--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -6,7 +6,7 @@
 }
 .header:hover {
     color: rgb(73, 79, 82);
-    font-size: 220%;
+    /* font-size: 220%; */
 }
 .headerImg {
     height: 40px;
