--- a/client/src/components/artists/Artists.css
+++ b/client/src/components/artists/Artists.css
@@ -11,9 +11,13 @@
 
 /* artist */
 .artist:hover {
-    font-size: 110%;
     color: rgb(73, 79, 82);
     font-weight: 600;
+    text-shadow:
+    -1px -1px 0  aliceblue,  
+    1px -1px 0  aliceblue,
+    -1px 1px 0  aliceblue,
+    1px 1px 0  aliceblue;
 }
 .artistName {
     color: grey;
