--- a/client/src/components/about/About.css
+++ b/client/src/components/about/About.css
@@ -3,5 +3,10 @@
     color: aliceblue;
 }
 .aboutImg {
-    max-height: 200px;
+    max-height: 300px;
+    border-radius: 50%;
+    margin: 30px;
+}
+p {
+    margin: 40px;
 }
