--- a/client/src/components/playlists/Playlists.css
+++ b/client/src/components/playlists/Playlists.css
@@ -14,9 +14,13 @@
     text-decoration: underline;
 }
 .playlist:hover {
-    font-size: 110%;
     color: rgb(73, 79, 82);
     font-weight: 600;
+    text-shadow:
+    -1px -1px 0  aliceblue,  
+    1px -1px 0  aliceblue,
+    -1px 1px 0  aliceblue,
+    1px 1px 0  aliceblue;
 }
 .playlistImg img {
     margin: 10px;
