add likes for artists, albums and playlists, when loguot redirect home page, and download the icons to the code

--- a/client/src/components/about/About.css
+++ b/client/src/components/about/About.css
@@ -6,6 +6,11 @@
     max-height: 300px;
     border-radius: 50%;
     margin: 30px;
+    transition: 1500ms;
+}
+.aboutImg:hover {
+    border-radius: 30%;
+    transition: 1500ms;
 }
 p {
     margin: 40px;
