--- a/client/src/components/albums/Albums.css
+++ b/client/src/components/albums/Albums.css
@@ -33,6 +33,9 @@
     color: rgb(73, 79, 82);
     font-weight: 600;
 }
+.artistLink {
+    color: rgb(73, 79, 82);
+}
 
 /* albumId */
 .songsOnAlbumDiv {
@@ -55,4 +58,29 @@
     font-size: 200%;
     color: rgb(73, 79, 82);
     margin-top: 0;
+}
+.likeIcon {
+    background-color:rgb(73, 79, 82);
+    border-radius: 50%;
+    height: 50px;
+    cursor: pointer;
+}
+.likeIcon:hover {
+    background-color:aliceblue;
+    transition: 500ms;
+}
+.unlikeIcon {
+    background-color:rgb(73, 79, 82);
+    border-radius: 50%;
+    height: 50px;
+    -webkit-transform:rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+    cursor: pointer;
+    transition: 500ms;
+}
+.unlikeIcon:hover {
+    background-color:aliceblue;
 }
