--- a/client/src/components/genericNotFound/GenericNotFound.css
+++ b/client/src/components/genericNotFound/GenericNotFound.css
@@ -8,4 +8,11 @@
 }
 .home Img {
     max-height: 100px;
+    border-radius: 50%;
+    margin: 10px;
+    transition: 3000ms;
+}
+.home Img:hover {
+    background-color: aliceblue;
+    transition: 3000ms;
 }
