playlist have usetid now that he get access to add songs to it, and style

--- a/client/src/components/albums/Albums.css
+++ b/client/src/components/albums/Albums.css
@@ -84,3 +84,10 @@
 .unlikeIcon:hover {
     background-color:aliceblue;
 }
+.title {
+    font-size: 150%;
+}
+.albumContainer {
+    display: flex;
+    justify-content: space-around;
+}
