--- a/client/src/components/playlists/Playlists.css
+++ b/client/src/components/playlists/Playlists.css
@@ -81,3 +81,11 @@
 .unlikeIcon:hover {
     background-color:aliceblue;
 }
+.title {
+    font-size: 150%;
+}
+.playlistContainer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
