--- a/client/src/components/songs/Songs.css
+++ b/client/src/components/songs/Songs.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@500&family=Gloria+Hallelujah&family=Gochi+Hand&family=Permanent+Marker&display=swap');
+
 .topSongs {
     flex: 25%;
     text-align: center;
@@ -59,6 +61,8 @@
 
 /* select */
 #inputSubmit {
+    font-family: 'Big Shoulders Inline Text', cursive;
+    font-weight: bold;
     color: #444444;
     background: #F3F3F3;
     border: 1px #DADADA solid;
@@ -78,6 +82,7 @@
     box-shadow: inset 1px 1px 1px #DFDFDF;   
 }
 #mySelect {
+    font-family: 'Big Shoulders Inline Text', cursive;
     font-size: 16px;
     font-weight: 700;
     color: #444;
@@ -85,20 +90,19 @@
     box-sizing: border-box;
     margin: 10px;
     border: 1px solid #aaa;
-    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
     border-radius: .5em;
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
     background-color: #fff;
     background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-      linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+    linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
     background-repeat: no-repeat, repeat;
     background-position: right .7em top 50%, 0 0;
     background-size: .65em auto, 100%;
 }
 #mySelect:hover {
-    border-color: rgb(109, 107, 107);
+    color: rgb(109, 107, 107);
 }
 .likeIcon {
     background-color:rgb(73, 79, 82);
