delete song from playlist

--- a/client/src/components/songs/Songs.css
+++ b/client/src/components/songs/Songs.css
@@ -49,14 +49,15 @@
 }
 .subHeader {
     text-decoration: underline;
-    font-size: 150%;
-    margin:10px;
+    font-size: 200%;
+    margin: 10px;
     color: aliceblue;
+    transition: 1s;
 }
 .subHeader:hover {
-    font-size: 200%;
     color: rgb(73, 79, 82);
-    margin-top: 0;
+    cursor: pointer;
+    transition: 2s;
 }
 
 /* select */
