--- a/client/src/components/playlists/Playlists.css
+++ b/client/src/components/playlists/Playlists.css
@@ -88,7 +88,7 @@
 .playlistContainer {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
 }
 .playlistNameLink {
     display: inline-block;
