delete and playlist edit by user with recoil package

--- a/client/src/components/users/User.css
+++ b/client/src/components/users/User.css
@@ -34,3 +34,10 @@
     color: aliceblue;
     transition: 2s;
 }
+.deleteDiv {
+    color: aliceblue;
+    margin: 30px;
+}
+.deleteP {
+    margin: 10px;
+}
