--- a/client/src/components/users/User.css
+++ b/client/src/components/users/User.css
@@ -41,3 +41,13 @@
 .deleteP {
     margin: 10px;
 }
+.newPlaylist {
+    color: aliceblue;
+    text-decoration: underline;
+    cursor: pointer;
+    transition: 1s;
+}
+.newPlaylist:hover {
+    font-size: 120%;
+    transition: 1s;
+}
